--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./work.css">
 </head>
 
 <body>
@@ -321,6 +322,90 @@
 
         <!-- <u>-it is underlined -->
             <p>Arun Kumar G <u>From Sivasa</u></p>
+
+    <!-- Text-color -->
+        <h1 class="text-color">Text Color</h1>
+        <!-- Text-alignment- Horizontal alignment of the text -->
+        <p class="text-align">Text-Aignment</p>
+        <p class="text-align-last">Text-Aignment</p>
+        <p class="text-align-direction">Text-Aignment</p>
+        <p class="text-vertical-align">Text-Aignment</p>
+
+        <!-- text-decoration-TO decorate line of text -->
+            <p class="text-dec">Fabevy Pavoorchatram</p>
+        <!-- Text-transformation - Change the caser of the alphabet
+        uppercase,lowercase,capitalize-->
+            <p class="text-transform">Text-transform</p>
+        <!-- Text-spacing
+        text-indent_only 1st line awya from margin
+        letter-spacing,line-height-word-spacing,White-spacing -->
+        <p class="text-spacing">Arun Kumar G</p>
+
+    <!-- Fonts -->
+    <!-- Font family & Font fallback are same _ it talks about the family of font -->
+    <!-- Font style _normal,italic,oblique(like italics but slightly low from italics style)-->
+    <p class="font-style">Arun Kumar <span>Sivasailam</span></p>
+    <!-- Font weight_increase the weight of font & Font-size-->
+    <p class="font-weight">Font weight <span>Font-weight</span></p>
+
+    <!-- Color-4 types
+        hsl-(0-red,120-green,240-blue)(0 to 100%)(0 to 100%)
+        hexa=#,0tof
+        rgba-value 0 to 255& a= 0 to 1
+        rgb-value 0 to 255
+         -->
+         <p class="color">Arun Kumar</p>
+
+    <!-- Box Model -->
+        <!-- It Contains: 
+            1.Margin
+            2.Border
+            3.Padding
+            4.Content-->
+        <p class="box-model">Box Model Concept</p>
+
+ <!--SELECTORS  -->
+        <!--Simple Selectors _ name,class(.),id(#) -->
+        <div class="class">Arun </div>
+        <div name="name">Kumar
+        </div>
+        <div id="id">Sivasailam</div>
+
+        <!-- COMBINATOR SELECTORS 
+                1.descendent(space)
+                2.child(>)
+                3.adjacent(+)
+                4.General sibiling (~)
+             -->
+        <!-- descendent selector -->
+        
+
+        <!-- Pseudo-Class (hover,active,focus)
+            hover(Change its properties while mouse over it )
+            focus(it react when we click it and it stay until we click other than this place)
+            active(it react and go while click)-->
+
+            <div class="focus">
+                <textarea name="" id="focus-box" cols="30" rows="10"></textarea>
+                <p>Arun Kumar</p>
+            </div>
+            <div class="active">
+                <textarea class="activebox" cols="30" rows="10"></textarea>
+
+            </div>
+            <div class="hover">
+                <p>Arun Kumar G</p>
+            </div>
+
+        
+
+
+
+
+
+
+
+
 </body>
 
 </html>
