--- a/index.html
+++ b/index.html
@@ -305,9 +305,9 @@
 
     <!-- <title> defines the title of the document
          it is more important for Search Engine Optimizatoin. it given only inside head-->
-         <title></title>
+    <title></title>
 
-     <!-- tt-teletype text not supported in html-->
+    <!-- tt-teletype text not supported in html-->
 
     <!--<wbr>-it   -->
     Arun<wbr>Kumar
@@ -315,31 +315,31 @@
     <!-- track - it provide text track for audio \ video -->
 
     <!--<ul>-unordered list to form a list with bulletin -->
-        <ul>
-            <li>Tea</li>
-            <li>Coffee</li>
-        </ul>
+    <ul>
+        <li>Tea</li>
+        <li>Coffee</li>
+    </ul>
 
-        <!-- <u>-it is underlined -->
-            <p>Arun Kumar G <u>From Sivasa</u></p>
+    <!-- <u>-it is underlined -->
+    <p>Arun Kumar G <u>From Sivasa</u></p>
 
     <!-- Text-color -->
-        <h1 class="text-color">Text Color</h1>
-        <!-- Text-alignment- Horizontal alignment of the text -->
-        <p class="text-align">Text-Aignment</p>
-        <p class="text-align-last">Text-Aignment</p>
-        <p class="text-align-direction">Text-Aignment</p>
-        <p class="text-vertical-align">Text-Aignment</p>
+    <h1 class="text-color">Text Color</h1>
+    <!-- Text-alignment- Horizontal alignment of the text -->
+    <p class="text-align">Text-Aignment</p>
+    <p class="text-align-last">Text-Aignment</p>
+    <p class="text-align-direction">Text-Aignment</p>
+    <p class="text-vertical-align">Text-Aignment</p>
 
-        <!-- text-decoration-TO decorate line of text -->
-            <p class="text-dec">Fabevy Pavoorchatram</p>
-        <!-- Text-transformation - Change the caser of the alphabet
+    <!-- text-decoration-TO decorate line of text -->
+    <p class="text-dec">Fabevy Pavoorchatram</p>
+    <!-- Text-transformation - Change the caser of the alphabet
         uppercase,lowercase,capitalize-->
-            <p class="text-transform">Text-transform</p>
-        <!-- Text-spacing
+    <p class="text-transform">Text-transform</p>
+    <!-- Text-spacing
         text-indent_only 1st line awya from margin
         letter-spacing,line-height-word-spacing,White-spacing -->
-        <p class="text-spacing">Arun Kumar G</p>
+    <p class="text-spacing">Arun Kumar G</p>
 
     <!-- Fonts -->
     <!-- Font family & Font fallback are same _ it talks about the family of font -->
@@ -354,50 +354,86 @@
         rgba-value 0 to 255& a= 0 to 1
         rgb-value 0 to 255
          -->
-         <p class="color">Arun Kumar</p>
+    <p class="color">Arun Kumar</p>
 
     <!-- Box Model -->
-        <!-- It Contains: 
+    <!-- It Contains: 
             1.Margin
             2.Border
             3.Padding
             4.Content-->
-        <p class="box-model">Box Model Concept</p>
+    <p class="box-model">Box Model Concept</p>
 
- <!--SELECTORS  -->
-        <!--Simple Selectors _ name,class(.),id(#) -->
-        <div class="class">Arun </div>
-        <div name="name">Kumar
-        </div>
-        <div id="id">Sivasailam</div>
+    <!--SELECTORS  -->
+    <!--Simple Selectors _ name,class(.),id(#) -->
+    <div class="class">Arun </div>
+    <div name="name">Kumar
+    </div>
+    <div id="id">Sivasailam</div>
 
-        <!-- COMBINATOR SELECTORS 
+    <!-- COMBINATOR SELECTORS 
                 1.descendent(space)
                 2.child(>)
                 3.adjacent(+)
                 4.General sibiling (~)
              -->
-        <!-- descendent selector -->
-        
+    <!-- descendent selector _ Child present inside the parent element get style-->
+    <div class="descendent">
+        <p>Arun Kumar</p>
+        <p>Front end Developer</p>
+    </div>
+    <p>Sivasailam</p>
+    <!-- child_ Element that are children of specified element-->
+    <div>
+        <p>Lorem ipsum dolor sit amet.</p>
 
-        <!-- Pseudo-Class (hover,active,focus)
+        <div class="child-attri">
+            <p>dolor sit amet consectetur adipisicing elit. Soluta.</p>
+        </div>
+        <p>sit amet consectetur adipisicing elit. Incidunt, nostrum!</p>
+    </div>
+    <!-- adjacent(+)Select an element that is directly next to the another specific element -->
+    <div class="adjacent">
+        <div>
+            <p>dolor sit amet consectetur adipisicing elit. Repellat, nesciunt.</p>
+            <div>
+                <p>ipsum dolor sit, amet consectetur adipisicing elit.</p>
+            </div>
+            <p>Lorem ipsum dolor sit amet.</p>
+        </div>
+    </div>
+    <!-- General Sibling(~)_ Select all elements that are next sibling of specified element -->
+    <div class="general-sibling">
+        <div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+        </div>
+        <p>Hi Good Morng</p>
+        <p>Hello Good eveng</p>
+    </div>
+
+    <!-- Pseudo-Class (hover,active,focus)
             hover(Change its properties while mouse over it )
             focus(it react when we click it and it stay until we click other than this place)
             active(it react and go while click)-->
 
-            <div class="focus">
-                <textarea name="" id="focus-box" cols="30" rows="10"></textarea>
-                <p>Arun Kumar</p>
-            </div>
-            <div class="active">
-                <textarea class="activebox" cols="30" rows="10"></textarea>
+    <div class="focus">
+        <textarea name="" id="focus-box" cols="30" rows="10"></textarea>
+        <p>Arun Kumar</p>
+    </div>
+    <div class="active">
+        <textarea class="activebox" cols="30" rows="10"></textarea>
 
-            </div>
-            <div class="hover">
-                <p>Arun Kumar G</p>
-            </div>
+    </div>
+    <div class="hover">
+        <p>Arun Kumar G</p>
+    </div>
 
-        
+    <!-- TRANSITION -->
+    <div class="transition">
+        <p>Arun Kumar G</p>
+    </div>
+
+
 
 
 
