--- a/index.html
+++ b/index.html
@@ -427,15 +427,72 @@
     <div class="hover">
         <p>Arun Kumar G</p>
     </div>
+    <br>
 
     <!-- TRANSITION -->
     <div class="transition">
         <p>Arun Kumar G</p>
     </div>
+    <br>
+    <br>
+    <div>
+        <!-- transition-timing function -->
+        <div class="transition-timing">
+            <div class="ease">Ease</div>
+            <div class="linear">Linear</div>
+            <div class="ease-in">Ease-in</div>
+            <div class="ease-out">Ease-out</div>
+            <div class="ease-in-out">Ease in out</div>
+            <div class="cubic-bezier">cubic-bezier </div>
+        </div>
+        <!-- box-shadow  -->
+        <div class="box-container">
+            <div class="box-shadow1">Box Shadow</div>
+            <div class="box-shadow2">Box Shadow-Inset</div>
+            <div class="box-shadow3">Box Shadow-Negative value</div>
+            <div class="box-shadow4">Box Shadow-Initial</div>
+        </div>
 
+        <div>
 
-
-
+        </div>
+        <!-- FILTER_ It defines the Visual Effects -->
+        <div class="filter">
+            <div class="normal">
+                <img src="../Images/biker.jpg" alt="">
+            </div>
+            <div class="blur">
+                <img src="../Images/biker.jpg" alt="">
+            </div>
+            <!--  -->
+            <div class="brightness"><!-- only in percentage --> 
+                <img src="../Images/biker.jpg" alt="">
+            </div>
+            <div class="contrast"><!-- only in percentage -->
+                <img src="../Images/biker.jpg" alt="">
+            </div>
+            <div class="grayscale"><!-- only in percentage -->
+                <img src="../Images/biker.jpg" alt="">
+            </div>
+            <div class="hue-rotate"><!-- only in percentage -->
+                <img src="../Images/biker.jpg" alt="">
+            </div>
+            <div class="invert"><!-- only in percentage -->
+                <img src="../Images/biker.jpg" alt="">
+            </div>
+            <div class="opacity">
+                <img src="../Images/biker.jpg" alt="">
+            </div>
+            <div class="saturation"><!-- only in percentage -->
+                <img src="../Images/biker.jpg" alt="">
+            </div>
+            <div class="sepia"><!-- only in percentage -->
+                <img src="../Images/biker.jpg" alt="">
+            </div>
+            <div class="initial"><!-- only in percentage -->
+                <img src="../Images/biker.jpg" alt="">
+            </div>
+        </div>
 
 
 
